# tgbot_troposcatter

./: .env.dist  .gitignore  Dockerfile  README.md  README_ru_s.md  app_logging.py  background.py  bot.py  docker-compose.yml  log.txt  paths.py  proxy.py  pyproject.toml  requirements.txt
tests/: test_i18n.py
tgbot/: config.py  i18n.py
tgbot/filters/: admin.py  bad_words.py  badwords.txt
tgbot/handlers/: acl_test.py  admin.py  answer_messages.py  calc_t_menu_buttons.py  calc_t_menu_sites.py  calculation_report.py  climate_zone_menu.py  error_handler.py  file.py  menu.py  my_id.py  purchases.py  show_bot_inf_menu.py  start.py  sticker.py  user.py  view_switch.py  wrong.py
tgbot/keyboards/: choise_buttons.py  inline.py  menu.py  reply.py
tgbot/middlewares/: acl.py  big_brother.py  rate_limit.py  sentinel.py
tgbot/misc/: notify_admins.py  setting_comands.py  states.py
tgbot/models/: models.py
tgbot/services/: async_get_sites.py  async_great_circles.py  async_path_profiler.py  async_tropo.py  calculation_report.py  profile_analyzer.py
tgbot/services/profile_analysis/: __init__.py  profile_analysis.py
tgbot/services/sites coords/: ccc Точка Б.trlc
tgbot/services/trace_calc/: pyproject.toml
tgbot/services/trace_calc/trace_calc/: __init__.py  async_get_sites.py  async_great_circles.py  async_tropo.py
tgbot/services/trace_calc/trace_calc/profile_analysis/: __init__.py  async_path_profiler.py  profile_analysis.py
tgbot/services/trace_calc/trace_calc/sites coords/: Aa bb.path  Aa bb.trlc
ubuntu/: sql.py
