[tool.poetry]
name = "tgbot-troposcatter"
version = "0.1.0"
description = ""
authors = ["DipodDP <DipodDP>"]
readme = "README.md"
packages = [{include = "tgbot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "2.24"
matplotlib = "3.6.3"
numpy = "1.24.1"
progress = ">=1.6,<2.0"
environs = ">=9.5.0,<9.6.0"
aiohttp = "3.8.3"
requests = "2.28.2"
progress2 = ">=1.3.0,<1.4.0"
flask = ">=2.2.2,<2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
back = "background:app.run"
