[tool.poetry]
name = "tgbot-troposcatter"
version = "0.2.0"
description = ""
authors = ["DipodDP <DipodDP>"]
readme = "README.md"
packages = [{include = "tgbot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "2.24"
environs = "*"
aiohttp = "3.8.3"
flask = ">=2.2.2,<2.3.0"
trace_calc = {git = "https://github.com/DipodDP/trace_calc.git"}
python-json-logger = "^4.0.0"

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
back = "background:app.run"
