[tool.poetry]
name = "trace-calc"
version = "0.2.13"
description = ""
authors = ["DipodDP <dipoddp@gmail.com>"]
readme = "README.md"
packages = [{include = "trace_calc"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.1"
numpy = "^1.25.0"
progress = "^1.6"
environs = "^9.5.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
